--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <p>Hlo Guys</p>
-    <iframe src=https://www.shellshock.io width=500></iframe>
+    <iframe src=https://www.shellshock.io width=1000 height=400></iframe>
     <script src="script.js"></script>
   </body>
 </html>
